# AVR_INTERFACING

./: README.md
APP/: CMakeLists.txt  main.c
APP/inc/: LedSwitch_test.h  Led_test.h  Switch_test.h  Task1.h  Task2.h  Task3.h  Task4.h
APP/src/: LedSwitch_test.c  Led_test.c  Switch_test.c  Task1.c  Task2.c  Task3.c  Task4.c
HAL/led/inc/: led-cfg.h  led.h
HAL/led/src/: led-cfg.c  led.c
HAL/switch/inc/: switch.h  switch_cfg.h
HAL/switch/src/: switch.c  switch_cfg.c
LIB/: BIT_MATH.h  STD_TYPES.h
MCAL/dio/: CMakeLists.txt
MCAL/dio/inc/: mdio.h
MCAL/dio/src/: mdio.c
MCAL/port/: CMakeLists.txt
MCAL/port/inc/: mport.h
MCAL/port/src/: mport.c
